Bugfix: Heading mobile detail projects too big

--- a/src/components/ProjectDetail/styles.scss
+++ b/src/components/ProjectDetail/styles.scss
@@ -58,6 +58,10 @@
       color: #000000;
     }
 
+    h1 {
+      font-size: 2em;
+    }
+
     button {
       margin: 5px;
       border-radius: 50px;
